Adjust card size

--- a/src/sass/components/_card.scss
+++ b/src/sass/components/_card.scss
@@ -25,7 +25,7 @@
 
 .card {
   max-width: 22.5rem;
-  height: 15rem;
+  height: 16rem;
   margin-inline: auto;
   padding: 2rem;
   @include mixins.shadow;
@@ -40,7 +40,7 @@
   p {
     margin-block-start: 1rem;
     line-height: 1.7;
-    font-size: 0.875rem; //14px
+    font-size: 0.85rem;
   }
 
   .image {
