--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -31,6 +31,7 @@ main {
     font-size: clamp(1.5rem, 1.2727rem + 1.1364vi, 2.125rem);
     font-weight: 200;
     line-height: 1.6;
+    color: variables.$dark-blue-700;
 
     @media (min-width: 75rem) {
       line-height: 1.4;
